--- a/core/templates/includes/header.html
+++ b/core/templates/includes/header.html
@@ -57,20 +57,20 @@
     <div class="container main-menu" id="main-menu">
       <button type="button" id="mobile-nav-toggle">
         <i class="fa-solid fa-bars"></i>
-        <span class="menu-title">Menu</span> 
+        <!-- <span class="menu-title">Menu</span>  -->
       </button>
 
 
     <div class="row align-items-center justify-content-between">
     <nav id="nav-menu-container">
     <ul class="nav-menu sf-js-enabled sf-arrows" style="touch-action: pan-y;">
-    <li class="menu-active"><a href="/">Ana səhifə</a></li>
+    <li class="anasehife menu-active"><a href="/">Ana səhifə</a></li>
     <li class="menu-has-children"><a href="/news" class="sf-with-ul">Xəbər</a>
       <ul style="display: none;">
-      <li><a href="/category/business_news">Biznes</a></li>
-      <li><a href="/category/sciene_and_technology_news">Elm və texnologiya</a></li>
-      <li><a href="/category/design_and_innovation_news">Dizayn və inovasiya</a></li>
-      <li><a href="/category/art_and_culture_news"> İncəsənət və mədəniyyət</a></li>
+      <li><a href="/category/business_news">BİZNES</a></li>
+      <li><a href="/category/sciene_and_technology_news">ELM / TEXNOLOGİYA</a></li>
+      <li><a href="/category/design_and_innovation_news">DİZAYN / İNNOVASİYA</a></li>
+      <li><a href="/category/art_and_culture_news"> EKOLOJİ</a></li>
       </ul>
     
       </li>
@@ -78,11 +78,11 @@
 
       <li class="menu-has-children"><a href="/article" class="sf-with-ul">Mövzular </a>
         <ul style="display: none;">
-          <li><a href="/category/marketing_articles">Marketinq</a></li>
-          <li><a href="/category/brand_stories_articles">Brend hekayələri</a></li>
-        <li><a href="/category/human_resources_articles">İnsan resursları</a></li>
-        <li><a href="/category/logistics_articles"> Logistika</a></li>
-        <li><a href="/category/health_articles">Sağlamlıq</a></li>
+          <li><a href="/category/marketing_articles">MARKETİNQ</a></li>
+          <li><a href="/category/human_resources_articles">İNSAN RESUSLARI</a></li>
+          <li><a href="/category/logistics_articles"> LOGİSTİKA</a></li>
+          <li><a href="/category/health_articles">SAĞLAMLIQ</a></li>
+          <li><a href="/category/brand_stories_articles">UĞUR HEKAYƏLƏRİ</a></li>
         </ul>
       
         </li>
@@ -90,20 +90,22 @@
 
 
     <!-- <li><a href="/career_center">Karyera</a></li> -->
-    <li class="menu-has-children"><a href="#" class="sf-with-ul">Kariyera</a>
+    <li class="menu-has-children"><a href="#" class="sf-with-ul">KARİYERA</a>
     <ul style="display: none;">
-    <li><a href="/career_center">Iş elanları</a></li>
-    <li><a href="#">Elanını yayınla</a></li>
-    <li><a href="#">CV yarat</a></li>
+    <li><a href="/career_center">İŞ ELANLARI</a></li>
+    <li><a href="#">CV YARAT</a></li>
     </ul>
   
     </li>
-    <li><a href="/author">Müəllifimiz ol</a></li>
+    <li><a href="/author">MÜƏLLİFİMİZ OL</a></li>
     <li><a href="/contact">Əlaqə</a></li>
 
-    <!-- <div class="">
-    <li ><a href="/contact">  <i style="margin-left: 460px;" class="fa-solid fa-magnifying-glass"></i>  </a></li>
-  </div> -->
+
+      
+
+     <!-- <div class="">
+    <li  ><a class="search" style="margin-left: -300px;" href="/search">  <i style="margin-left: 460px;" class="fa-solid fa-magnifying-glass"></i>  </a></li>
+  </div>  -->
 
     </ul>
     </nav>
@@ -127,12 +129,4 @@
 
 
 
-    <!-- <div class="navbar-right">
-      <form class="Search" action="" method="GET" role="search">
-      <input style="display: none;" type="text" class="form-control Search-box" name="q" id="Search-box" placeholder="Search" value="">
-      <label for="Search-box" class="Search-box-label">
-        <a href="/search">  <i style="font-size: 20px; margin-top: 7px;" class="fa-solid fa-magnifying-glass"></i> </a>
-      </label>
-  
-      </form>
-      </div> -->
+    
