--- a/article/templates/brand_stories.html
+++ b/article/templates/brand_stories.html
@@ -21,13 +21,13 @@
     <div class="row">
     <div class="col-lg-12">
     <div class="hero-nav-area">
-    <h1 class="text-white">Brend hekayələri məqalələri </h1>
+    <h1 class="text-white">Uğur Hekayələri </h1>
     <p class="text-white link-nav"><a href="/home">Ana səhifə </a> <i class="fa-solid fa-angle-right"></i><a href="#"> Brend hekayələri məqalələri </a></p>
     </div>
     </div>
     <div class="col-lg-12">
     <div class="news-tracker-wrap">
-    <h6><span>Brend hekayələri məqalələri </span> <a href="#">Lorem ipsum</a></h6>
+    <h6><span>Uğur Hekayələri </span> <a href="#">  </a></h6>
     </div>
     </div>
     </div>
@@ -41,7 +41,7 @@
     <div class="col-lg-8 post-list">
     
     <div class="latest-post-wrap">
-    <h4 class="cat-title">Brend hekayələri məqalələri </h4>
+    <h4 class="cat-title">Uğur Hekayələri</h4>
     {% for i in brand_stories %}
     <div class="single-latest-post row align-items-center">
     <div class="col-lg-5 post-left">
@@ -66,7 +66,7 @@
         <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-eye"></i>{{ i.views }}</a></li>
         </ul> 
     <p class="excert">
-    {{i.descrtiption|truncatechars:200}}
+    {{i.descrtiption|safe|truncatechars:200}}
     </p>
     </div>
 
