--- a/article/templates/detail_article.html
+++ b/article/templates/detail_article.html
@@ -39,7 +39,7 @@
     <section class="latest-post-area pb-120">
     <div class="container no-padding">
     <div class="row">
-    <div class="col-lg-8 post-list">
+    <div class=" post-list">
     
     <div class="single-post-wrap">
     <div class="feature-img-thumb relative">
@@ -51,20 +51,100 @@
     <li><a href="#">{{ article.tags }}</a></li>
     </ul>
     <a href="#">
-    <h3>{{ article.title }}</h3>
+    <h3 class="ali" style="font-style: 40px !important; color: black;" >{{ article.title }}</h3>
     <br>
     </a>
     <ul class="meta pb-20">
-    <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-user"></i>{{ article.owner }}</a></li>
-    <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-calendar-days"></i>{{ article.created_at }}</a></li>
-    <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-eye"></i></i>{{article.views}}</a></li>
+    <li class="w3-large" ><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-user"></i>{{ article.owner }}</a></li>
+    <li class="w3-large" ><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-calendar-days"></i>{{ article.created_at }}</a></li>
+    <li class="w3-large" ><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-eye"></i></i>{{article.views}}</a></li>
 
-    <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-comment"></i>{{article_comments_count_detail.count}} </a></li>
+    <li class="w3-large" ><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-comment"></i>{{article_comments_count_detail.count}} </a></li>
     </ul>
 
-    <p>
-        {{ article.descrtiption }}
+    <p class="ali1" >
+        {{ article.descrtiption|safe }}
     </p>
+    {% if article.detail_image %}
+    <img style="  display: block;
+    margin-left: auto;
+    margin-right: auto;" class="img-fluid center" src="{{ article.detail_image.url }}" alt="" data-pagespeed-url-hash="3036699310" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
+    {% endif %}
+
+<p class="ali1" >
+    {{ article.descrtiption2|safe }}
+</p>
+
+{% if article.detail_image2 %}
+<img style="  display: block;
+margin-left: auto;
+margin-right: auto;" class="img-fluid center" src="{{ article.detail_image2.url }}" alt="" data-pagespeed-url-hash="3036699310" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
+{% endif %}
+
+
+{% if article.descrtiption3 %}
+<p class="ali1" >
+    {{ article.descrtiption3|safe }}
+</p>
+{% endif %}
+
+
+{% if article.detail_image3 %}
+<img style="  display: block;
+margin-left: auto;
+margin-right: auto;" class="img-fluid center" src="{{ article.detail_image3.url }}" alt="" data-pagespeed-url-hash="3036699310" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
+{% endif %}
+
+
+
+{% if article.descrtiption4 %}
+<p class="ali1" >
+    {{ article.descrtiption4|safe }}
+</p>
+{% endif %}
+
+
+{% if article.detail_image4 %}
+<img style="  display: block;
+margin-left: auto;
+margin-right: auto;" class="img-fluid center" src="{{ article.detail_image4.url }}" alt="" data-pagespeed-url-hash="3036699310" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
+{% endif %}
+
+
+{% if article.descrtiption5 %}
+<p class="ali1" >
+    {{ article.descrtiption5|safe }}
+</p>
+{% endif %}
+
+
+{% if article.detail_image5 %}
+<img style="  display: block;
+margin-left: auto;
+margin-right: auto;" class="img-fluid center" src="{{ article.detail_image5.url }}" alt="" data-pagespeed-url-hash="3036699310" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
+{% endif %}
+
+
+{% if article.descrtiption6 %}
+<p class="ali1" >
+    {{ article.descrtiption6|safe }}
+</p>
+{% endif %}
+
+
+
+
+{% if article.detail_image6 %}
+<img style="  display: block;
+margin-left: auto;
+margin-right: auto;" class="img-fluid center" src="{{ article.detail_image6.url }}" alt="" data-pagespeed-url-hash="3036699310" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
+{% endif %}
+
+
+
+
+
+
     <div class="navigation-wrap justify-content-between d-flex">
     <a class="prev" href="#"><span class="lnr lnr-arrow-left"></span>Prev Post</a>
     <a class="next" href="#">Next Post<span class="lnr lnr-arrow-right"></span></a>
@@ -122,195 +202,8 @@
     
     </div>
 
-    {% include "./includes/right_part.html"%} 
+    
 
-    <!-- <div class="col-lg-4">
-        <div class="sidebars-area">
-        <div class="single-sidebar-widget editors-pick-widget">
-        <h6 class="title">Lorem ipsum</h6>
-        <div class="editors-pick-post">
-        <div class="feature-img-wrap relative">
-        <div class="feature-img relative">
-        <div class="overlay overlay-bg"></div>
-        <img class="img-fluid" src="/static/images/e1.jpg" alt="" data-pagespeed-url-hash="3111915323" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
-        </div>
-        <ul class="tags">
-        <li><a href="#">Travel</a></li>
-        </ul>
-        </div>
-        <div class="details">
-        <a href="#">
-        <h4 class="mt-20">Lorem, ipsum dolor sit 
-            amet consectetur adipisicing elit. </h4>
-        </a>
-        <ul class="meta">
-            <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-user"></i>user</a></li>
-            <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-calendar-days"></i>16 may 2022</a></li>
-            </ul>
-        <p class="excert">
-        Lorem ipsum dolor sit amet, consecteturadip isicing elit, sed do eiusmod tempor incididunt ed do eius.
-        </p>
-        </div>
-        <div class="post-lists">
-        <div class="single-post d-flex flex-row">
-        <div class="thumb">
-        <img src="/static/images/e2.jpg" alt="" data-pagespeed-url-hash="3406415244" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
-        </div>
-        <div class="detail">
-        <a href="#"><h6>Lorem, ipsum dolor sit 
-            amet consectetur adipisicing elit.</h6></a>
-        <ul class="meta">
-            <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-user"></i>user</a></li>
-            <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-calendar-days"></i>12 may 2022</a></li>
-            </ul>
-        </div>
-        </div>
-        <div class="single-post d-flex flex-row">
-        <div class="thumb">
-        <img src="/static/images/e3.jpg" alt="" data-pagespeed-url-hash="3700915165" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
-        </div>
-        <div class="detail">
-        <a href="#"><h6>Lorem, ipsum dolor sit 
-            amet consectetur adipisicing elit.</h6></a>
-        <ul class="meta">
-            <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-user"></i>user</a></li>
-            <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-calendar-days"></i>12 may 2022</a></li>
-            </ul>
-        </div>
-        </div>
-        <div class="single-post d-flex flex-row">
-        <div class="thumb">
-        <img src="/static/images/e4.jpg" alt="" data-pagespeed-url-hash="3995415086" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
-        </div>
-        <div class="detail">
-        <a href="#"><h6>Lorem, ipsum dolor sit 
-            amet consectetur adipisicing elit.</h6></a>
-        <ul class="meta">
-            <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-user"></i>user</a></li>
-            <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-calendar-days"></i>12 may 2022</a></li>
-            </ul>
-        </div>
-        </div>
-        </div>
-        </div>
-        </div>
-        <div class="single-sidebar-widget ads-widget">
-        <img class="img-fluid" src="/static/images/sidebar-ads.jpg" alt="" data-pagespeed-url-hash="3321942762" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
-        </div>
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        <div class="single-sidebar-widget most-popular-widget">
-        <h6 class="title">Lorem, ipsum</h6>
-        <div class="single-list flex-row d-flex">
-        <div class="thumb">
-        <img src="/static/images/m1.jpg" alt="" data-pagespeed-url-hash="2510187219" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
-        </div>
-        <div class="details">
-        <a href="#">
-        <h6>Lorem, ipsum dolor sit 
-            amet consectetur adipisicing elit.</h6>
-        </a>
-        <ul class="meta">
-            <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-user"></i>user</a></li>
-            <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-calendar-days"></i>12 may 2022</a></li>
-            </ul>
-        </div>
-        </div>
-        <div class="single-list flex-row d-flex">
-        <div class="thumb">
-        <img src="/static/images/m2.jpg" alt="" data-pagespeed-url-hash="2804687140" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
-        </div>
-        <div class="details">
-        <a href="#">
-        <h6>Lorem, ipsum dolor sit 
-            amet consectetur adipisicing elit.</h6>
-        </a>
-        <ul class="meta">
-            <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-user"></i>user</a></li>
-            <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-calendar-days"></i>12 may 2022</a></li>
-            </ul>
-        </div>
-        </div>
-        <div class="single-list flex-row d-flex">
-        <div class="thumb">
-        <img src="/static/images/m3.jpg" alt="" data-pagespeed-url-hash="3099187061" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
-        </div>
-        <div class="details">
-        <a href="#">
-        <h6>Lorem, ipsum dolor sit 
-            amet consectetur adipisicing elit. </h6>
-        </a>
-        <ul class="meta">
-            <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-user"></i>user</a></li>
-            <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-calendar-days"></i>12 may 2022</a></li>
-            </ul>
-        </div>
-        </div>
-        <div class="single-list flex-row d-flex">
-        <div class="thumb">
-        <img src="/static/images/m4.jpg" alt="" data-pagespeed-url-hash="3393686982" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
-        </div>
-        <div class="details">
-        <a href="#">
-        <h6>Lorem, ipsum dolor sit 
-            amet consectetur adipisicing elit.</h6>
-        </a>
-        <ul class="meta">
-            <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-user"></i>user</a></li>
-            <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-calendar-days"></i>12 may 2022</a></li>
-            </ul>
-        </div>
-        </div>
-        </div>
-        <div class="single-sidebar-widget social-network-widget">
-        <h6 class="title">Sosial şəbəkə</h6>
-        <ul class="social-list">
-        <li class="d-flex justify-content-between align-items-center fb">
-        <div class="icons d-flex flex-row align-items-center">
-        <i class="fa fa-facebook" aria-hidden="true"></i>
-        <p>983 Bəyənmə</p>
-        </div>
-        <a href="#">Səhifəni bəyən</a>
-        </li>
-        <li class="d-flex justify-content-between align-items-center tw">
-        <div class="icons d-flex flex-row align-items-center">
-        <i class="fa fa-twitter" aria-hidden="true"></i>
-        <p>983 İzləyici</p>
-        </div>
-        <a href="#">Bizi izlə</a>
-        </li>
-        <li class="d-flex justify-content-between align-items-center yt">
-        <div class="icons d-flex flex-row align-items-center">
-        <i class="fa fa-youtube-play" aria-hidden="true"></i>
-        <p>983 Abunəçi</p>
-        </div>
-        <a href="#">Abunə ol</a>
-        </li>
-        <li class="d-flex justify-content-between align-items-center rs">
-        <div class="icons d-flex flex-row align-items-center">
-        <i class="fa fa-rss" aria-hidden="true"></i>
-        <p>983 Abunəçi</p>
-        </div>
-        <a href="#">Abunə ol</a>
-        </li>
-        </ul>
-        </div>
-        </div>
-        </div> -->
     </div>
     </div>
     </section>
