--- a/article/templates/human_resources.html
+++ b/article/templates/human_resources.html
@@ -58,7 +58,7 @@
 
     <div class="col-lg-7 post-right">
     <a href="{{i.get_absolute_url}}">
-    <h4>{{ i.title|truncatechars:40 }}</h4>
+    <h4>{{ i.title|safe|truncatechars:40 }}</h4>
     </a>
     <ul class="meta">
         <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-user"></i>{{ i.owner }}</a></li>
