--- a/article/templates/popular_article.html
+++ b/article/templates/popular_article.html
@@ -50,7 +50,7 @@
     <img class="img-fluid" src="{{ i.image.url }}" alt="" data-pagespeed-url-hash="2585403232" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
     </div>
     <ul class="tags">
-    <li><a href="#">Lifestyle</a></li>
+    <li><a href="#">{{i.tags}}</a></li>
     </ul>
     </div>
 
@@ -70,7 +70,7 @@
         <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-comment"></i>06 Comments</a></li>
         </ul> 
     <p class="excert">
-    {{i.descrtiption|truncatechars:150}}
+    {{i.descrtiption|safe|truncatechars:150}}
     </p>
     </div>
 
