--- a/core/static/css/linearicons.css+font-awesome.min.css+bootstrap.css+magnific-popup.css+nice-select.css+animate.min.css+owl.carousel.css+jquery-ui.css+main.css.pagespeed.cc.uL8vLbbDon.css
+++ b/core/static/css/linearicons.css+font-awesome.min.css+bootstrap.css+magnific-popup.css+nice-select.css+animate.min.css+owl.carousel.css+jquery-ui.css+main.css.pagespeed.cc.uL8vLbbDon.css
@@ -11,6 +11,15 @@
 }
 
 
+.ekolojinews{
+  background-image: url(../images/ekoloji.jpg);
+}
+
+
+/* .butunxeberler{
+  background-image: url(../images/1.png);
+} */
+
 ul.a {
   list-style-type: circle !important;
 }
@@ -3020,6 +3029,21 @@ header {
   padding: 15px 20px;
   position: relative;
 }
+@media (max-width: 993px) {
+
+  .search{
+    margin-left: -500px;
+  }
+
+}
+
+@media (max-width: 770px) {
+
+  .image1{
+    height: 370px !important;
+  }
+
+}
 
 @media (max-width: 575px) {
   .main-menu {
@@ -3092,7 +3116,7 @@ header {
 .sf-arrows .sf-with-ul:after {
   content: "\f107";
   position: absolute;
-  right: 15px;
+  right: 10px;
   font-family: FontAwesome;
   font-style: normal;
   font-weight: normal;
@@ -3113,8 +3137,8 @@ header {
   text-decoration: none;
   display: inline-block;
   color: #fff;
-  font-weight: 400;
-  font-size: 18px;
+  font-weight: 900;
+  font-size: 20px;
   text-transform: uppercase;
   outline: none;
 }
@@ -3139,7 +3163,7 @@ header {
   color: #333;
   transition: 0.3s;
   display: block;
-  font-size: 16px;
+  font-size: 20px;
   text-transform: none;
 }
 
@@ -3510,6 +3534,7 @@ body {
   color: #fff;
   padding: 4px 30px;
   font-weight: 300;
+  border-radius: 4px;
 }
 
 .top-post-area .top-post-left .top-post-details .tags li a {
@@ -3587,13 +3612,16 @@ body {
   bottom: 12px;
   left: 12px;
 }
-
+.anasehife{
+  font-weight: 900 !important;
+}
 .top-post-area .top-post-right .single-top-post .top-post-details .tags li {
   display: inline-block;
   background: #4a9efb;
   color: #fff;
   padding: 4px 30px;
   font-weight: 300;
+  border-radius: 4px;
 }
 
 .top-post-area .top-post-right .single-top-post .top-post-details .tags li a {
@@ -4401,7 +4429,7 @@ body {
 /* =================================== */
 .hero-nav-area {
   text-align: center;
-  background: #4a9efb;
+  /* background: #4a9efb; */
   color: #fff;
   padding: 65px 0px;
 }
