--- a/news/templates/art_and_culture.html
+++ b/news/templates/art_and_culture.html
@@ -17,17 +17,17 @@
 <div class="site-main-container">
 
     <section class="top-post-area pt-10">
-    <div class="container no-padding">
+    <div class="ekolojinews container no-padding">
     <div class="row">
     <div class="col-lg-12">
     <div class="hero-nav-area">
-    <h1 class="text-white">Biznes xəbərləri </h1>
-    <p class="text-white link-nav"><a href="/home">Ana səhifə </a> <i class="fa-solid fa-angle-right"></i><a href="#"> Biznes xəbərləri </a></p>
+    <h1 class="text-white">Ekologiya xəbərləri </h1>
+    <p class="text-white link-nav"><a href="/home">Ana səhifə </a> <i class="fa-solid fa-angle-right"></i><a href="#"> Ekologiya xəbərləri </a></p>
     </div>
     </div>
     <div class="col-lg-12">
     <div class="news-tracker-wrap">
-    <h6><span>Biznes xəbərləri </span> <a href="#">Lorem ipsum</a></h6>
+    <h6><span>Ekologiya xəbərləri </span> <a href="#">Lorem ipsum</a></h6>
     </div>
     </div>
     </div>
@@ -66,7 +66,7 @@
         <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-eye"></i>{{ i.views }}</a></li>
         </ul> 
     <p class="excert">
-    {{i.descrtiption|truncatechars:200}}
+    {{i.descrtiption|safe|truncatechars:200}}
     </p>
     </div>
 
