--- a/news/templates/news.html
+++ b/news/templates/news.html
@@ -16,8 +16,8 @@
 
 <div class="site-main-container">
 
-    <section class="top-post-area pt-10">
-    <div class="container no-padding">
+    <section  class="  top-post-area pt-10">
+    <div class="butunxeberler container no-padding">
     <div class="row">
     <div class="col-lg-12">
     <div class="hero-nav-area">
@@ -66,7 +66,7 @@
         <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-eye"></i>{{ i.views }}</a></li>
         </ul> 
     <p class="excert">
-    {{i.descrtiption|truncatechars:200}}
+    {{i.descrtiption|safe|truncatechars:230}}
     </p>
     
     </div>
