--- a/article/templates/human_resources.html
+++ b/article/templates/human_resources.html
@@ -17,7 +17,7 @@
 <div class="site-main-container">
 
     <section class="top-post-area pt-10">
-    <div class="container no-padding">
+    <div class="humanarticle container no-padding">
     <div class="row">
     <div class="col-lg-12">
     <div class="hero-nav-area">
