--- a/core/templates/search.html
+++ b/core/templates/search.html
@@ -28,7 +28,7 @@
     </div>
     <div class="col-lg-12">
     <div class="news-tracker-wrap">
-    <h6><span>Axtarış</span> <a href="#"></a></h6>
+    <h6><span>Işgüzarda axtarış</span> <a href="#"></a></h6>
     </div>
     </div>
     </div>
@@ -45,7 +45,7 @@
 
 
     <div class="latest-post-wrap">
-    <h4 class="cat-title">Axtarış</h4>
+    <h4 class="cat-title">Işgüzarda axtarış</h4>
 
 
 
@@ -76,7 +76,7 @@
     <img class="img-fluid" src=" {{ i.image.url }}   " alt="" data-pagespeed-url-hash="2585403232" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
     </div>
     <ul class="tags">
-    <li><a href="#">Lifestyle</a></li>
+    <li><a href="#">{{i.tags}}</a></li>
     </ul>
     </div>
 
