--- a/core/templates/career_center.html
+++ b/core/templates/career_center.html
@@ -12,7 +12,7 @@
 {% block content %}
 
 <section class="top-post-area pt-10 mb-4">
-    <div class="container no-padding">
+    <div class="career_center container no-padding">
     <div class="row">
     <div class="col-lg-12">
     <div class="hero-nav-area">
