--- a/article/templates/article.html
+++ b/article/templates/article.html
@@ -69,7 +69,7 @@
         <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-eye"></i>{{ i.views }}</a></li>
         </ul> 
     <p class="excert">
-    {{i.descrtiption|safe|truncatechars:150}}
+    {{i.descrtiption_block|safe|truncatechars:150}}
     </p>
     </div>
 
