--- a/contact/templates/contact.html
+++ b/contact/templates/contact.html
@@ -60,7 +60,7 @@
     <span class="lnr "> <i class="fa-solid fa-envelope"></i> </span>
     </div>
     <div class="contact-details">
-    <h5>xxxxx@gmai.com</h5>
+    <h5>info@isguzar.az</h5>
     <p>Sizi gözləyirik</p>
     </div>
     </div>
