--- a/core/templates/career_center.html
+++ b/core/templates/career_center.html
@@ -51,7 +51,7 @@
                 </div> -->
            </div>
            
-        <a href="{{ i.get_absolute_url }}">   <h5 style="font-family: 'Roboto Mono', monospace;">{{ i.title }}</h5> </a>
+        <a href="{{ i.get_absolute_url }}">   <h5 style="text-align: center;  font-family: 'Roboto Mono', monospace;">{{ i.title }}</h5> </a>
            <p style="text-align: center;">{{ i.company }}</p>
 
         </div>
