--- a/core/templates/includes/header.html
+++ b/core/templates/includes/header.html
@@ -55,10 +55,14 @@
     <img src="{% static 'images/9cd5f0.png' %}" alt="">
     
     <div class="container main-menu" id="main-menu">
-      <button type="button" id="mobile-nav-toggle">
-        <i class="fa-solid fa-bars"></i>
-        <!-- <span class="menu-title">Menu</span>  -->
-      </button>
+      <div>
+        <button type="button" id="mobile-nav-toggle">
+          <i class="fa-solid fa-bars"></i>
+          
+          <!-- <span class="menu-title">Menu</span>  -->
+        </button>
+        <a style="color: white;"  class=" mobile_search" href="/search">  <i class="fa-solid fa-magnifying-glass"></i>  </a>
+      </div>
 
 
     <div class="row align-items-center justify-content-between">
@@ -71,6 +75,8 @@
       <li><a href="/category/sciene_and_technology_news">ELM / TEXNOLOGİYA</a></li>
       <li><a href="/category/design_and_innovation_news">DİZAYN / İNNOVASİYA</a></li>
       <li><a href="/category/art_and_culture_news"> EKOLOJİ</a></li>
+      <li><a href="/category/art_and_culture_news"> HƏFTƏNİN İCMALI</a></li>
+
       </ul>
     
       </li>
@@ -103,9 +109,9 @@
 
       
 
-     <!-- <div class="">
-    <li  ><a class="search" style="margin-left: -300px;" href="/search">  <i style="margin-left: 460px;" class="fa-solid fa-magnifying-glass"></i>  </a></li>
-  </div>  -->
+      
+      <li class="icon_delete" style="padding-left: 140px;" ><a class="search" href="/search">  <i class="fa-solid fa-magnifying-glass"></i>  </a></li>
+    
 
     </ul>
     </nav>
