--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -173,7 +173,7 @@
 <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-hourglass"></i> {{i.time}} dəqiqəlik məqalə </a></li>
 </ul>
 <p style="font-size: 18px;" class="excert">
-{{i.descrtiption|safe|truncatechars:190}}
+{{i.descrtiption_block|safe|truncatechars:190}}
 </p>
 </div>
 </div>
@@ -256,7 +256,7 @@
     <!-- <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-eye"></i></i>{{item.views}}</a></li> -->
     </ul>
 <p class="excert">
-{{item.descrtiption|safe|truncatechars:150}}
+{{item.descrtiption_block|safe|truncatechars:150}}
 </p>
 </div>
 
@@ -291,7 +291,7 @@
     <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-hourglass"></i> {{item.time}} dəqiqəlik məqalə </a></li>
     </ul>
 <p class="excert">
-    {{item.descrtiption|safe|truncatechars:150}}</p>
+    {{item.descrtiption_block|safe|truncatechars:150}}</p>
 </div>
 
 
