--- a/article/templates/human_resources.html
+++ b/article/templates/human_resources.html
@@ -66,7 +66,7 @@
         <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-eye"></i>{{ i.views }}</a></li>
         </ul> 
     <p class="excert">
-    {{i.descrtiption|truncatechars:200}}
+    {{i.descrtiption_block|truncatechars:200}}
     </p>
     </div>
 
