--- a/article/templates/popular_article.html
+++ b/article/templates/popular_article.html
@@ -70,7 +70,7 @@
         <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-comment"></i>06 Comments</a></li>
         </ul> 
     <p class="excert">
-    {{i.descrtiption|safe|truncatechars:150}}
+    {{i.descrtiption_block|safe|truncatechars:150}}
     </p>
     </div>
 
