--- a/news/templates/detail_news.html
+++ b/news/templates/detail_news.html
@@ -62,12 +62,15 @@
 
 
     </ul>
-    <p class="ali1" >
+    <p class="ali1"style="font-size: 30px !important;" >
         {{ news.descrtiption|safe }}
     </p>
+
+    {% if news.detail_image %}
     <img style="  display: block;
     margin-left: auto;
     margin-right: auto;" class="img-fluid center" src="{{ news.detail_image.url }}" alt="" data-pagespeed-url-hash="3036699310" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
+{% endif %}
 
 <p class="ali1" >
     {{ news.descrtiption2|safe }}
@@ -147,8 +150,11 @@ margin-right: auto;" class="img-fluid center" src="{{ news.detail_image6.url }}"
 
 {% endif %}
     <div class="navigation-wrap justify-content-between d-flex">
-    <a class="prev" href="#"><span class="lnr lnr-arrow-left"></span>Prev Post</a>
-    <a class="next" href="news_detail/<slug:slug>/  ">Next Post<span class="lnr lnr-arrow-right"></span></a>
+    <a class="prev" href="{{ the_prev.get_absolute_url }}"><span class="lnr lnr-arrow-left"></span>Prev Post</a>
+    {{the_next}}
+    {% if the_next %}
+    <a class="next" href="{{ the_next.get_absolute_url }}">Next Post<span class="lnr lnr-arrow-right"></span></a>
+    {% endif %}
     </div>
     <div class="comment-sec-area">
     <div class="container">
