--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -29,13 +29,13 @@
 
 {% for i in news1 %}
 
-<div class="col-lg-8 top-post-left" style="margin-top: 1px;">
+<div class="col-lg-8 top-post-left" >
 
 
 
-<div class="feature-image-thumb relative">
+<div class="feature-image-thumb relative indexnewsimage" style="height: 505px;">
 <div class="overlay overlay-bg"></div>
-<img style="max-width: 1000px; height: 505px;  " class="img-fluid image1" src="{{ i.image.url }}" alt="" data-pagespeed-url-hash="4222329640" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
+<img style="max-width: 1000px; height: 505px;  " class="img-fluid image1 indexnewsimage" src="{{ i.image.url }}" alt="" data-pagespeed-url-hash="4222329640" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
 </div>
 <div class="top-post-details">
 <ul class="tags">
@@ -66,9 +66,9 @@
 
 
 <div class="single-top-post mt-10" >
-    <div class="feature-image-thumb relative">
+    <div class="feature-image-thumb relative indexnewsimage" style="height: 247.5px;">
     <div class="overlay overlay-bg"></div>
-    <img class="img-fluid" src="{{ i.image.url }}" alt="" data-pagespeed-url-hash="516362186" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
+    <img style="height: 247.5px;" class="img-fluid indexnewsimage" src="{{ i.image.url }}" alt="" data-pagespeed-url-hash="516362186" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
     </div>
     <div class="top-post-details">
     <ul class="tags">
@@ -93,9 +93,9 @@
 {% for i in news3 %}
 
 <div class="single-top-post mt-10" >
-<div class="feature-image-thumb relative">
+<div class="feature-image-thumb relative indexnewsimage"  style="height: 247.5px;">
 <div class="overlay overlay-bg"></div>
-<img class="img-fluid" src="{{ i.image.url }}" alt="" data-pagespeed-url-hash="516362186" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
+<img style="height: 247.5px;" class="img-fluid indexnewsimage" src="{{ i.image.url }}" alt="" data-pagespeed-url-hash="516362186" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
 </div>
 <div class="top-post-details">
 <ul class="tags">
@@ -205,9 +205,9 @@
 {% for item in popular_list1 %}
 
 <div class="feature-post relative">
-<div class="feature-img relative">
+<div class="feature-img relative indexnewsimage">
 <div class="overlay overlay-bg"></div>
-<img class="img-fluid" src="{{ item.image.url }}" alt="" data-pagespeed-url-hash="3036699310" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
+<img class="img-fluid indexnewsimage" src="{{ item.image.url }}" alt="" data-pagespeed-url-hash="3036699310" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
 </div>
 <div class="details">
 <ul class="tags">
@@ -237,9 +237,9 @@
 
 <div  class="col-lg-6 single-popular-post">
 <div class="feature-img-wrap relative">
-<div class="feature-img relative">
+<div class="feature-img relative indexnewsimage">
 <div class="overlay overlay-bg"></div>
-<img style="height: 200px;" class="img-fluid" src="{{ item.image.url }}" alt="" data-pagespeed-url-hash="3331199231" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
+<img style="height: 200px;" class="img-fluid indexnewsimage" src="{{ item.image.url }}" alt="" data-pagespeed-url-hash="3331199231" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
 </div>
 <ul class="tags">
 <li><a href="#">{{ item.tags }}</a></li>
@@ -273,9 +273,9 @@
 
 <div class="col-lg-6 single-popular-post">
 <div class="feature-img-wrap relative">
-<div class="feature-img relative">
+<div class="feature-img relative indexnewsimage">
 <div class="overlay overlay-bg"></div>
-<img style="height: 200px;" class="img-fluid" src="{{ item.image.url }}" alt="" data-pagespeed-url-hash="3625699152" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
+<img style="height: 200px;" class="img-fluid indexnewsimage" src="{{ item.image.url }}" alt="" data-pagespeed-url-hash="3625699152" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
 </div>
 <ul class="tags">
 <li><a href="">{{ item.tags }}</a></li>
